# scheme-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  pyproject.toml  zensical.toml
.cargo/: config.toml
.github/workflows/: docs.yml  rust.yml
benches/: cold_boot.rs  fib.rs  fib.scm  integrate.rs  integrate.scm  yin-yang.scm  yin_yang.rs
docs/: GoukiScheme.bib  GoukiScheme.tex  GoukiScheme.typ  index.md
docs/Language Reference/: index.md
docs/Standard Libraries/: async.md  base.md  generators.md  index.md  lang.md  prompts.md  runtime.md  rust.md  syntax.md  threads.md
proc-macros/: Cargo.toml
proc-macros/src/: lib.rs
scheme/: generators.sls  lang.sls  match.sls  optargs.sls  rnrs.scm  rnrs.sls  rust.sls  syntax.sls
scheme/lang/: pipeline.sls
scheme/rnrs/: base.sls  bytevectors.sls  conditions.sls  control.sls  exceptions.sls  files.sls  hashtables.sls  letrec.sls  lists.sls  sorting.sls  syntax-case.sls  syntax-rules.sls  values.sls
scheme/rnrs/io/: conditions.sls  ports.sls  simple.sls
scheme/rnrs/records/: syntactic.sls
scheme/scheme-rs/: plugins.sls
scheme/srfi/: :197.sls  :2.sls
src/: ast.rs  atomic.rs  builtin.rs  character.rs  compile.rs  conditions.rs  continuation.rs  docs.md  enumerations.rs  env.rs  err.rs  error.rs  eval.rs  exception.rs  exceptions.rs  expand.rs  futures.rs  gc.rs  hashtables.rs  keywords.rs  lex.rs  lib.rs  lists.rs  main.rs  num.rs  parse.rs  ports.rs  proc.rs  record.rs  records.rs  registry.rs  runtime.rs  sexpr.rs  stdlib.scm  string_builder.rs  strings.rs  symbols.rs  syntax.rs  tests.rs  threads.rs  (+3 more)
src/ast/: eval.rs  mod.rs  mod.rs~  parse.rs
src/character/: unicode.rs
src/cps/: analysis.rs  codegen.rs  compile.rs  contify.rs  mod.rs  reduce.rs
src/gc/: collection.rs  collection.rs~  lib.rs~  mod.rs  mod.rs~
src/lsp/: completion.rs  document.rs  error.rs  hover.rs  mod.rs  procedure.rs
src/syntax/: lex.rs  mod.rs  parse.rs
src/tests/: r6rs.rs  r7rs.rs  r7rs.scm
tests/: atomics.rs  atomics.scm  atomics_concurrent.rs  atomics_concurrent.scm  cross_lib_macros.rs  cycle_uaf.rs  keywords.rs  keywords.scm  lang_optargs.rs  lang_optargs.scm  lib-a.sls  lib-b.sls  lib-c.sls  lib-d.sls  match_wildcard.rs  match_wildcard.scm  optargs.rs  optargs.scm  r6rs.rs  r6rs.scm  r7rs.rs  r7rs.scm  reentrant_expand.rs  reentrant_expand.scm  specs.rs  transitive-imports.rs  transitive_imports.scm
tests/common/: mod.rs
unicode/: fetch.sh
