[package]
name = "scheme-rs"
version = "0.1.0-alpha.1"
edition = "2024"
authors = ["Matthew Plant <maplant@protonmail.com>"]
description = "Embedded scheme for the async-rust ecosystem"
license = "MPL-2.0"

documentation = "https://docs.rs/crate/scheme-rs"
homepage = "https://github.com/maplant/scheme-rs"
repository = "https://github.com/maplant/scheme-rs"

[dependencies]
async-trait = "0.1"
by_address = "1.2"
derive_more = { version = "1.0", features = ["debug", "from"]}
dyn-clone = "1.0.13"
either = "1"
futures = "0.3"
indexmap = "2"
inventory = "0.3"
inkwell = { version = "0.6", features = ["llvm18-1"] }
nom = "7"
nom_locate = "4"
num = "0.4"
ordered-float = "5"
scheme-rs-macros = { version = "0.1.0-alpha.1", path = "proc-macros" }
rand = "0.8"
rust-embed = { version = "8", features = ["debug-embed"] }
thiserror = "1"
tokio = { version = "1.41", features = ["full"] }
unicode_categories = "0.1"
malachite = { version = "0.5.1", features = ["floats"] }
rustyline = { version = "15.0.0", features = ["derive"] }

[profile.release]
lto = true

[build-dependencies]
nom = "7"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "fib"
harness = false

[[bench]]
name = "cold_boot"
harness = false
