[package]
name = "scheme-rs"
version = "0.1.0-alpha.1"
edition = "2024"
authors = ["Matthew Plant <maplant@protonmail.com>"]
description = "Embedded scheme for the async-rust ecosystem"
license = "MPL-2.0"

documentation = "https://docs.rs/crate/scheme-rs"
homepage = "https://github.com/maplant/scheme-rs"
repository = "https://github.com/maplant/scheme-rs"

[dependencies]
by_address = "1.2"
derive_builder = "0.20"
derive_more = { version = "1.0", features = ["debug", "from"]}
either = "1"
futures = "0.3"
indexmap = "2"
inventory = "0.3"
malachite = { version = "0.7", features = ["floats"] }
num = "0.4"
ordered-float = "5"
rand = { version = "0.9", features = ["thread_rng"] }
rust-embed = { version = "8", features = ["debug-embed"] }
rustyline = { version = "17", features = ["derive"] }
scheme-rs-macros = { version = "0.1.0-alpha.1", path = "proc-macros" }
stacker = "0.1"
thiserror = "1"
tokio = { version = "1.47", features = ["full"] }
unicode_categories = "0.1"

# Cranelift dependencies
cranelift = "0.122"
cranelift-jit = "0.122"
cranelift-native = "0.122"
cranelift-module = "0.122"

[profile.release]
lto = true

[build-dependencies]
nom = "7"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "cold_boot"
harness = false

[[bench]]
name = "fib"
harness = false

[[bench]]
name = "integrate"
harness = false

[[bench]]
name = "yin_yang"
harness = false
