[package]
name = "scheme-rs-macros"
version = "0.1.0-alpha.1"
edition = "2024"
authors = ["Matthew Plant <maplant@protonmail.com>"]
description = "Embedded scheme for the async-rust ecosystem (macros)"
license = "MPL-2.0"

documentation = "https://docs.rs/crate/scheme-rs"
homepage = "https://github.com/maplant/scheme-rs"
repository = "https://github.com/maplant/scheme-rs"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
